--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -1,49 +1,54 @@
+groups: []
 resources:
 - name: ops.git
   type: git
   source:
     branch: master
-    private_key: {{ops-git-deploy-key}}
-    uri: {{ops-git-uri}}
     paths:
     - frontend/config-bucket/**
+    private_key: {{ops-git-deploy-key}}
+    uri: {{ops-git-uri}}
 - name: this.git
   type: git
   source:
-    branch: ci #TODO change to master after merged
+    branch: ci
     uri: https://github.com/govau/cga-frontend-config
 - name: certs-d.s3
   type: s3
-  source: &certs
+  source:
+    access_key_id: {{aws-access-key-id-d}}
     bucket: {{aws-bucket-d}}
     region_name: ap-southeast-2
-    versioned_file: le-responder/current-certificates.tgz
-    access_key_id: {{aws-access-key-id-d}}
     secret_access_key: {{aws-secret-access-key-d}}
     server_side_encryption: AES256
+    versioned_file: le-responder/current-certificates.tgz
 - name: certs-g.s3
   type: s3
   source:
-    <<: *certs
-    bucket: {{aws-bucket-g}}
     access_key_id: {{aws-access-key-id-g}}
+    bucket: {{aws-bucket-g}}
+    region_name: ap-southeast-2
     secret_access_key: {{aws-secret-access-key-g}}
+    server_side_encryption: AES256
+    versioned_file: le-responder/current-certificates.tgz
 - name: release-d.s3
   type: s3
-  source: &release
+  source:
+    access_key_id: {{aws-access-key-id-d}}
     bucket: {{aws-bucket-d}}
     region_name: ap-southeast-2
-    versioned_file: release.tgz
-    access_key_id: {{aws-access-key-id-d}}
     secret_access_key: {{aws-secret-access-key-d}}
     server_side_encryption: AES256
+    versioned_file: release.tgz
 - name: release-g.s3
   type: s3
   source:
-    <<: *release
-    bucket: {{aws-bucket-g}}
     access_key_id: {{aws-access-key-id-g}}
+    bucket: {{aws-bucket-g}}
+    region_name: ap-southeast-2
     secret_access_key: {{aws-secret-access-key-g}}
+    server_side_encryption: AES256
+    versioned_file: release.tgz
 - name: slack
   type: slack-notification
   source:
@@ -59,8 +64,8 @@ jobs:
   - do:
     - aggregate:
       - get: certs.s3
-        resource: certs-d.s3
         trigger: true
+        resource: certs-d.s3
       - get: ops.git
         trigger: true
       - get: this.git
@@ -80,8 +85,8 @@ jobs:
   - do:
     - aggregate:
       - get: certs.s3
-        resource: certs-g.s3
         trigger: true
+        resource: certs-g.s3
       - get: ops.git
         trigger: true
       - get: this.git
