--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -103,6 +103,8 @@ jobs:
         trigger: true
         resource: certs-b.s3
       - get: ops.git
+        passed:
+        - ship-it
         trigger: true
       - get: this.git
     - task: create-release
@@ -299,3 +301,8 @@ jobs:
         text: |
           :white_check_mark: $BUILD_PIPELINE_NAME $BUILD_JOB_NAME SUCCESS
           <$ATC_EXTERNAL_URL/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME|View build details>
+- name: ship-it
+  plan:
+  - get: ops.git
+    passed:
+    - create-y-cld
