--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -7,7 +7,7 @@ resources:
     paths:
     - frontend/config-bucket/**
     - ops/terraform/sshca-ca.pub
-    private_key: ((ops-git-deploy-key))
+    private_key: ((ops-git-deploy-key.private_key))
     uri: ((ops-git-uri))
 - name: this.git
   type: git
@@ -217,7 +217,7 @@ jobs:
       file: this.git/ci/tasks/deploy-release.yml
       params:
         ENV_NAME: b
-        JUMPBOX_SSH_KEY: ((jumpbox-key))
+        JUMPBOX_SSH_KEY: ((jumpbox-key.private_key))
         JUMPBOX_SSH_PORT: ((jumpbox-port))
     on_failure:
       put: slack
@@ -278,7 +278,7 @@ jobs:
       file: this.git/ci/tasks/deploy-release.yml
       params:
         ENV_NAME: d
-        JUMPBOX_SSH_KEY: ((jumpbox-key))
+        JUMPBOX_SSH_KEY: ((jumpbox-key.private_key))
         JUMPBOX_SSH_PORT: ((jumpbox-port))
     on_failure:
       put: slack
@@ -339,7 +339,7 @@ jobs:
       file: this.git/ci/tasks/deploy-release.yml
       params:
         ENV_NAME: g
-        JUMPBOX_SSH_KEY: ((jumpbox-key))
+        JUMPBOX_SSH_KEY: ((jumpbox-key.private_key))
         JUMPBOX_SSH_PORT: ((jumpbox-port))
     on_failure:
       put: slack
@@ -400,7 +400,7 @@ jobs:
       file: this.git/ci/tasks/deploy-release.yml
       params:
         ENV_NAME: "y"
-        JUMPBOX_SSH_KEY: ((jumpbox-key))
+        JUMPBOX_SSH_KEY: ((jumpbox-key.private_key))
         JUMPBOX_SSH_PORT: ((jumpbox-port))
     on_failure:
       put: slack
